--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,8 +3,7 @@
 <div class="row mb-4 recipe">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/recipe/{{recipe.id}}">{{recipe.name}}</a>
+      <a href="/recipe/{{recipe.id}}">{{recipe.recipe_name}}</a>
     </h2>
     <p>
       <!-- Pass recipe_type value to the helper function -->
