updated recipes, handlebars and css ids

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -18,8 +18,8 @@
         {{!-- <input class="form-input" type="number" id="project-funding" name="project-funding" /> --}}
         <label for="recipe-type">Choose a Recipe Type:</label>
         <select name="recipe-type" id="recipe-type">
-          <option value="main">Main</option>
-          <option value="side">Side</option>
+          <option value="main">Main-Dish</option>
+          <option value="side">Side-Dish</option>
           <option value="snack">Snack</option>
           <option value="dessert">Dessert</option>
         </select>
