--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,8 +1,11 @@
 <div class="text-center">
   <h2>{{recipe_name}}</h2>
   <p>{{recipe_desc}}</p>
+  <h2>Ingredients:</h2>
   <p>{{ingredients}}</p>
+  <h2>Directions:</h2>
   <p>{{recipe_directions}}</p>
+  <p>Type of Recipe:</p>
   <p>{{recipe_type}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
