--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,30 +11,59 @@
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="d-flex justify-space-between align-center p-2">
-      <h1>
-        <a id= "title" href="/">Sear Me Out!</a>
-
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
+  
+    <div class="container-xxl jumbotron">
+      <div class="row">
+        <div class="col col-9"> 
+          <header>
+            <h1>
+              <a class="link" href="/">Sear Me Out!</a>
+            </h1>
+          </header>
+        </div>
+        <div class="col col-1">
+          
+        </div>
+        <div class="col col-2">
+          <nav>
+            <!-- Conditionally render login or logout links -->
+            {{#if logged_in}}
+            <a class="link" href="/profile">profile</a> |
+            <button class="no-button" id="logout">logout</button>
+            {{else}}
+            <a class="link" href="/login">login</a>
+            {{/if}}
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="container-xxl">
+      <div class="row">
+        <div class="col col-2">
+        
+        </div>
+        <div class="col col-8">
+          <main>
+            <!-- Render the sub layout -->
+            {{{ body }}}
+          </main>
+        </div>
+        <div class="col col-2">
+        </div>
+      </div>
+    </div>
+    <div class="container-xxl text-center">
+      <div class="row">
+        <div class="col col-2">
+        </div>
+        <div class="col col-8">
+          <footer>
+          </footer>
+        </div>
+        <div class="col col-2">
+        </div>
+      </div>
+    </div>
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
