--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,11 +1,16 @@
-<div class="text-center">
+<div class="">
   <h2>{{recipe_name}}</h2>
+  <br>
   <p>{{recipe_desc}}</p>
-  <h2>Ingredients:</h2>
+  <br>
+  <h4>Ingredients:</h4>
   <p>{{ingredients}}</p>
-  <h2>Directions:</h2>
+  <br>
+  <h4>Directions:</h4>
   <p>{{recipe_directions}}</p>
-  <p>Type of Recipe:</p>
+  <br>
+  <h4>Type of Recipe:</h4>
   <p>{{recipe_type}}</p>
+  <br>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
 </div>
