--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,7 @@
 <div class="row mb-4 recipe">
   <div class="col-md-5">
     <h2>
+      {{{get_emoji}}}
       <a class="link" href="/recipe/{{recipe.id}}">{{recipe.recipe_name}}</a>
     </h2>
     <p>
