--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -34,6 +34,11 @@
         <label for="recipe-directions"><h5>Directions:</h5></label>
         <textarea class="form-input" id="recipe-directions" name="recipe-directions"></textarea>
       </div>
+      {{!-- <div class="form-group">
+        <form action="/profile" method="post" enctype="multipart/form-data">
+          <input type="file" name="avatar" />
+        </form>
+      </div> --}}
       <div class="form-group">
         <button type="submit" class="btn btn-secondary"> Add Recipe </button>
       </div>
